fix: markdown span wrap (#9264)

--- a/src/renderer/src/assets/styles/markdown.scss
+++ b/src/renderer/src/assets/styles/markdown.scss
@@ -103,7 +103,7 @@
   }
 
   span {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   p code,
